Fix white space on add to cart button (#45)
* Add white-space: normal to add_to_cart_button

--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -260,7 +260,7 @@ body.woocommerce-cart {
 .woocommerce ul.products li.product a.add_to_cart_button {
 	width: 100%;
 	font-size: 16px;
-	text-align: center;
+	white-space: normal;
 }
 
 @media #{$small-only} {
